fix unwanted scrollbar

--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -1,8 +1,9 @@
 html,
-body {
+body,
+#___gatsby,
+#___gatsby > div {
     margin: 0;
     padding: 0;
-    height: 100%;
     background-color: #edf4f7;
     font-family: sans-serif;
 }
